# shiftlab

./: README.md
shiftlab/: main.py  pyproject.toml  requirements.txt
shiftlab/configs/: default.yaml
shiftlab/scripts/: show_saved_plots.py
shiftlab/src/shiftlab/: __init__.py  config.py  generators.py  metrics.py  mixing.py  models.py  plots.py  preprocessing.py  runner.py  utils.py
